# LoadBalancers_Comparison_SDN

./: BucketLoadBalancer.py  BucketLoadBalancer_1_3.py  LoadBalancer.py  LoadBalancerNoMonitor.py  Magisterka_dane.xlsx  MainLoadBalancer.py  Questions  README.md  Traffic_Monitor.py  elephant.py  file_1MB  file_3MB  openload_0.1.2-2_amd64.deb  params_false_0_roundRobin.conf  params_false_1_roundRobin.conf  params_false_2_leastBandwidth.conf  params_false_2_random.conf  params_false_2_roundRobin.conf  params_false_3_leastBandwidth.conf  params_false_3_random.conf  params_false_3_roundRobin.conf  params_true_0_roundRobin.conf  params_true_1_roundRobin.conf  params_true_2_leastBandwidth.conf  params_true_2_random.conf  params_true_2_roundRobin.conf  params_true_3_leastBandwidth.conf  params_true_3_random.conf  params_true_3_roundRobin.conf  random_network.py  run.sh  sflow.py  topology.py  topology2.py  xlsx_conv.py
backup_results/: Magisterka_dane.xlsx  results_params_false_0_roundRobin.conf_1.xlsx  results_params_false_0_roundRobin.conf_10.xlsx  results_params_false_0_roundRobin.conf_11.xlsx  results_params_false_0_roundRobin.conf_12.xlsx  results_params_false_0_roundRobin.conf_13.xlsx  results_params_false_0_roundRobin.conf_14.xlsx  (+634 more)
openload_improved/src/: Makefile  Makefile.am  Makefile.in  event_loop.cpp  event_loop.h  http_client.cpp  http_client.h  http_headers.cpp  http_headers.h  http_test.cpp  openload  sock.cpp  sock.h  tmplchunk.cpp  tmplchunk.h  tmplparmchunk.cpp  tmplparmchunk.h  tmpltxtchunk.cpp  tmpltxtchunk.h  url.cpp  url.h  verifier.cpp  verifier.h
(+14 files in other folders)
