bin_PROGRAMS = openload

EXTRA_DIST = event_loop.h http_client.h http_headers.h sock.h tmplchunk.h \
	tmplparmchunk.h tmpltxtchunk.h url.h verifier.h

openload_SOURCES = sock.cpp event_loop.cpp http_client.cpp http_test.cpp \
	url.cpp http_headers.cpp tmplchunk.cpp tmplparmchunk.cpp tmpltxtchunk.cpp \
	verifier.cpp

